--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,8 @@ a{
   h1{
     font-size: 5rem;
     font-weight: 500;
+    letter-spacing: -0.03em;
+    line-height: 1;
   }
   span{
     font-style: italic;
@@ -361,6 +363,55 @@ table th{
     display: none;
 
   }
+  .creat{
+    padding: 3rem 3rem;
+  }
+  .body-content{
+    margin-top: 5rem;
+    h1{
+      font-size: 35px;
+    }
+  }
+  
+  .solution{
+    font-size: 24px;
+    padding-bottom: 30px ;
+  }
+  .cards{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   gap: 2rem;
+  }
+  .card{
+    box-shadow:2px 5px 15px 5px rgba(0, 0, 0, 0.082);
+  
+  }
+  .learn{
+    margin-bottom: 5rem;
+  }
+  .learn-more a{
+    margin: 2rem 0;
+  }
+
+  .imgbg{
+    height: 200px;
+    border-radius: 0 10rem 0px 0;
+    padding: 5rem;
+    margin-top: 7rem;
+  }
+  .imgbg h1{
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .connect{
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+  .connect h1{
+    font-size: 3rem;
+    padding: 1rem 0;
+  }
   .header{
     background-image: url("././assets/vcimg5.png");
     backdrop-filter: blur(50px);
@@ -492,12 +543,13 @@ table th{
 
   }
   .creat{
-    padding: 2rem 3rem;
+    padding: 5rem 3rem 2rem 3rem;
   }
   .body-content{
-    margin-top: 5rem;
+    margin-top: 3rem;
     h1{
-      font-size: 40px;
+      font-size: 55px;
+      line-height: 1;
     }
   }
   .solution{
@@ -599,11 +651,13 @@ table th{
 
 
 @media screen and (min-width:991.1px)and (max-width: 1199px) {
-
+  .creat{
+    padding: 5rem ;
+  }
   .body-content{
     margin-top: 4rem;
     h1{
-      font-size: 50px;
+      font-size: 65px;
     }
   }
   .solution{
