--- a/src/index.css
+++ b/src/index.css
@@ -10,20 +10,27 @@ nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.158);
+  background-color: white;
   padding:1rem 4rem ;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   padding: 10px;
-  z-index: 1000;
+  z-index: 1;
 }
 nav img{
   height: 80px;
   padding-left: 20px;
 }
-ul{
+nav button{
+  display: none;
+  border: none;
+  font-size: 36px;
+  background: none;
+  cursor: pointer;
+}
+.nav-link{
   display: flex;
   justify-content: space-around;
   gap: 20px;
@@ -35,6 +42,34 @@ a{
   font-size: 18px;
   text-transform: capitalize;
   color: #000;
+}
+.small-nav{
+  height: 50vh;
+  background: white;
+  width: 100%;
+  display: none;
+  z-index: 100;
+  position:absolute;
+  top: 100px;
+  left: 0;
+  animation: menu 0.5s linear;
+}
+.small-nav-ul{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items:center;
+  border-bottom: 1px solid black;
+}
+.small-nav-ul a{
+  display:flex;
+}
+.small-nav-ul hr{
+  width: 100%;
+}
+.ri-close-large-fill{
+  display: none;
 }
 .partner{
   background:black;
@@ -374,11 +409,25 @@ table th{
   align-items: center;
   height: 500px;
 }
-@media (max-width:567px) {
-  nav ul{
-    display: none;
+@keyframes menu {
+  from {
+    height: 0;
 
   }
+  to{
+    height: 50vh;
+  }
+}
+/* @media (max-width:800px) {
+
+  .nav-link{
+    display: none;
+  }
+  nav button{
+    display: block;
+   }
+   
+ 
   .creat{
     padding: 3rem 1.5rem;
   }
@@ -551,13 +600,203 @@ table th{
   table th{
     display: flex;
   }
-}
-@media screen and (min-width:567.1px) and (max-width: 991px) {
   
-  nav ul{
-    display: none;
+} */
+ /* @media (max-width:567px) {
 
+  .nav-link{
+    display: none;
   }
+  nav button{
+    display: block;
+   }
+   
+  
+  .creat{
+    padding: 3rem 1.5rem;
+  }
+  .body-content{
+    margin-top: 5rem;
+    h1{
+      font-size: 35px;
+    }
+  }
+  
+  .solution{
+    font-size: 24px;
+    padding-bottom: 30px ;
+  }
+  .cards{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   gap: 2rem;
+  }
+  .card{
+    box-shadow:2px 5px 15px 5px rgba(0, 0, 0, 0.082);
+  
+  }
+  .learn{
+    margin-bottom: 5rem;
+  }
+  .learn-more a{
+    margin: 2rem 0;
+  }
+
+  .imgbg{
+    height: 200px;
+    border-radius: 0 10rem 0px 0;
+    padding: 3rem;
+    margin-top: 7rem;
+  }
+  .imgbg h1{
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .connect{
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+  .connect h1{
+    font-size: 3rem;
+    padding: 1rem 0;
+  }
+  .header{
+    background-image: url("././assets/vcimg5.png");
+    backdrop-filter: blur(50px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 250px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 5rem 0 0 3rem;
+    border-radius: 0 0 7rem 0;
+    h1{
+      font-size: 2rem;
+      color: white;
+    }
+    span{
+      font-style: italic;
+    }
+  }
+  .our-story{
+    padding: 3rem 2rem;
+  }
+  .story{
+    h1{
+      font-size: 40px;
+      padding-bottom: 10px;
+    }
+    hr{
+      width: 55rem;
+      border-top: 2px solid black;
+    }
+  }
+  
+  .division{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .division-h1{
+    font-size: 2rem;
+    padding: 2rem;
+  }
+  .square{
+    display: none;
+  }
+  .our-division{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+  .mission{
+    text-align: center;
+    width: 100%;
+    h1{
+      padding: 20px 0;
+      font-size: 40px;
+    }
+    h4{
+      font-size: 18px;
+      font-weight: 500;
+      text-wrap: wrap;
+    }
+  }
+  .vission{
+    text-align: center;
+    width: 100%;
+    h1{
+      padding: 20px 0;
+      font-size: 40px;
+    }
+    h4{
+      font-size: 18px;
+      font-weight: 500;
+      text-wrap: wrap;
+    }
+  }
+  .line{
+    margin: 3rem 0 2rem 0;
+    border: 1px solid gray;
+    width: 80%;
+  }
+  .linee{
+    margin: 0rem 0 2rem 0;
+    border: 1px solid gray;
+    width: 80%;
+  }
+  .with-us{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap:0rem;
+  }
+  .investor{
+    margin-top: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    h1{
+      font-size: 35px;
+      font-style: italic;
+      font-weight: 500;
+      padding-right: 10px;
+      color: rgba(218, 165, 32, 0.897);
+    }
+    hr{
+      width: 70%;
+      border-top: 2px solid black;
+    }
+  }
+  footer{
+    width: 100%;
+    background: #000;
+    border-radius: 0 10rem 0 0 ;
+    padding: 5rem 4rem;
+  }
+  table th{
+    display: flex;
+  }
+  
+}  */
+ @media (max-width: 991px) {
+  
+  .nav-link{
+    display: none;
+  }
+  nav button{
+    display: block;
+   }
+   .ri-close-large-fill{
+    display: none;
+   }
   .creat{
     padding: 5rem 3rem 2rem 3rem;
   }
@@ -608,7 +847,8 @@ table th{
     padding: 5rem;
   }
   .imgbg h1{
-    font-size: 1.5rem;
+    font-size: 2.5rem;
+    text-wrap: wrap;
     font-weight: 600;
   }
   .connect{
@@ -638,7 +878,7 @@ table th{
     backdrop-filter: blur(50px);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 250px;
+    height: 400px;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -663,10 +903,31 @@ table th{
     }
   
   }
+  .division{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+  }
+  .division-h1{
+    font-size: 3rem;
+    padding: 2rem;
+  }
+  .square{
+    display: none;
+  }
+  .our-division{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
 }
 
 
-@media screen and (min-width:991.1px)and (max-width: 1199px) {
+/* @media screen and (min-width:991.1px)and (max-width: 1199px) {
   .creat{
     padding: 5rem ;
   }
@@ -757,4 +1018,4 @@ table th{
       font-style: italic;
     }
   }
-}
+}  */
